<resources>
    <string name="app_name">CinemApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in_text">Sign in</string>
    <string name="email_form_text">Email</string>
    <string name="password_form_text">Password</string>
    <string name="sign_up_text">Sign up</string>
    <string name="first_name_form_text">First Name</string>
    <string name="last_name_form_text">Last Name</string>
    <string name="ssn_form_text">SSN</string>
    <string name="submit_form_button">Submit</string>
    <string name="premium_form_text">Premium</string>
    <string name="normal_form_text">Normal</string>
    <string name="customer_sign_up_text_sign_up">Customer Sign Up</string>
    <string name="amka_form_text">AMKA</string>
    <string name="owner_sign_up_text_sign_up_owner">Owner Sign Up</string>
    <string name="welcome_back_owner_main_activity_text">Welcome back owner</string>
    <string name="add_staff_owner">Add staff</string>
    <string name="manage_movies_owner">Manage movies</string>
    <string name="manage_movie_theaters_owner">Manage Movie Theaters</string>
    <string name="see_statistics_owner">See Statistics</string>
    <string name="movie_theater_form_text">Movie Theater</string>
    <string name="staff_manage_program_text">Manage program</string>
    <string name="welcome_back_staff_text">Welcome back staff</string>
    <string name="staff_add_movie_text">Add movie</string>
    <string name="title_form_text">Title</string>
    <string name="duration_form_text">Duration</string>
    <string name="name_form_text">Name</string>
    <string name="address_form_text">Address</string>
    <string name="movie_name_form_text">Movie name</string>
    <string name="movie_theater_name_form_text">Movie theater name</string>
    <string name="movie_title_text">Movie title</string>
    <string name="select_movie">Select movie</string>
    <string name="auditorium_text">Auditorium</string>
    <string name="time_text">Time</string>
    <string name="month_text">Month</string>
    <string name="select_text">Select</string>
    <string name="number_of_auditoriums_form_text">Number of auditoriums</string>
    <string name="movie_title_customer">Movie Title</string>
    <string name="select_customer">Select</string>
    <string name="owner_text">Owner</string>
    <string name="customer_text">Customer</string>
    <string name="select_type_of_user_text">Select type of user</string>
    <string name="book_tickets_text">Book Tickets</string>
    <string name="make_rating_text">Make Rating</string>
    <string name="welcome_back_customer_text">Welcome back customer</string>
    <string name="add_movie_theater">Add movie theater</string>
    <string name="remove_movie_theater">remove movie theater</string>
    <string name="remove_movie">Remove movie</string>
    <string name="add_movies_text">Add movies</string>
    <string name="manage_movies_text">Manage movies</string>
    <string name="remove_movies">Remove movies</string>
    <string name="add_movie_theaters">Add movie theaters</string>
    <string name="manage_movie_theaters">Manage movie theaters</string>
    <string name="remove_movie_theaters">Remove movie theaters</string>
    <string name="day_text">Day</string>
    <string name="clear_program">clear program</string>
    <string name="update_movie_theater">Update movie theater</string>
    <string name="number_of_tickets">Number of tickets</string>
    <string name="ratings">Ratings</string>
    <string name="add_ratings">Add ratings</string>
    <string name="read_ratings">Read ratings</string>
    <string name="ratings_for">Ratings for</string>
    <string name="good_morning_welcome_message">Good morning</string>
    <string name="good_evening_welcome_message">Good evening</string>
    <string name="resevationBtn">Make Reservation</string>
    <string name="payment_instructions">Please enter your credit card number to continue</string>
    <string name="pay">Pay</string>
    <string name="select_rating">Select rating</string>
    <string name="payment">Payment</string>
    <string name="reserve_seats">Reserve Seats</string>
    <string name="select_auditorium_and_date">Select Auditorium and Date</string>
    <string name="choose_cinema_for">Choose cinema for</string>
    <string name="seats_available">Seats available</string>
    <string name="seats">Seats</string>
    <string name="movie_theater">Movie theater</string>
</resources>