<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.staff.clearProgram.ClearProgramActivity">

    <TextView
        android:id="@+id/textView13"
        style="@style/TextActivitiesWithFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:width="80dp"
        android:text="@string/day_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment6"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        style="@style/TextActivitiesWithFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:text= "@string/auditorium_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        style="@style/TextActivitiesWithFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:width="80dp"
        android:text="@string/time_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment6"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragment6"
        android:name="com.example.cinemaapp.view.fragments.slot.SlotFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="146dp" />

</androidx.constraintlayout.widget.ConstraintLayout>